--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    apply from: "${rootDir}/versions.gradle"
     repositories {
         google()
         mavenCentral()
@@ -6,8 +7,13 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$libs.hilt"
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0"
     }
+}
+
+allprojects {
+    apply from: "${rootDir}/versions.gradle"
 }
 
 task clean(type: Delete) {
