Add core module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
+
     implementation("androidx.appcompat:appcompat:$libs.appcompat")
     implementation("com.google.android.material:material:$libs.material")
     implementation("androidx.navigation:navigation-fragment-ktx:$libs.navigation")
