--- a/venues-map/build.gradle
+++ b/venues-map/build.gradle
@@ -1,23 +1,22 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
     compileSdk sdk.compileSdk
 
     defaultConfig {
-        applicationId "com.mrezanasirloo.dott"
         minSdk sdk.minSdk
         targetSdk sdk.targetSdk
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -39,16 +38,24 @@ android {
 }
 
 dependencies {
+
     implementation project(":core")
     implementation project(":navigation")
-    implementation project(":venue-details")
 
+    implementation("androidx.core:core-ktx:$libs.core")
     implementation("androidx.appcompat:appcompat:$libs.appcompat")
     implementation("com.google.android.material:material:$libs.material")
     implementation("androidx.navigation:navigation-fragment-ktx:$libs.navigation")
 
+    implementation("com.google.maps.android:maps-utils-ktx:$libs.mapsUtils")
+    api("com.google.android.gms:play-services-location:$libs.location")
+    api("com.google.android.gms:play-services-maps:$libs.maps")
+
     implementation("com.google.dagger:hilt-android:$libs.hilt")
     kapt("com.google.dagger:hilt-compiler:$libs.hilt")
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+    testImplementation("junit:junit:$libs.junit")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:$libs.mockito")
+    testImplementation("org.mockito:mockito-inline:$libs.mockitoInline")
+    testImplementation("android.arch.core:core-testing:$libs.testing")
 }
